--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+# version: "3"
 
 services:
     # image project
@@ -50,7 +50,7 @@ services:
         platform: linux/x86_64
         restart: unless-stopped
         ports:
-            - "8080:80"
+            - "8082:80"
         environment:
             PMA_HOST: db
             PMA_PORT: 3306
